java_library(
    name = "example_seed_corpora",
    resources = glob(["com/example/*Inputs/**"]),
    visibility = ["//examples/junit/src/test/java/com/example:__pkg__"],
)

java_library(
    name = "example_dictionaries",
    resources = glob(["**/*.dict"]),
    visibility = ["//examples/junit/src/test/java/com/example:__pkg__"],
)

filegroup(
    name = "MutatorFuzzTestInputs",
    srcs = ["com/example/MutatorFuzzTestInputs"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "additional_seed_directories",
    srcs = [
        "additional/dir1",
        "additional/dir2",
    ],
    visibility = ["//examples/junit/src/test/java/com/example:__pkg__"],
)
