java_library(
    name = "mock_driver",
    srcs = ["MockDriver.java"],
    data = ["//driver:mock_driver"],
    visibility = [
        "//agent/src/jmh/java/com/code_intelligence/jazzer:__subpackages__",
        "//agent/src/test/java/com/code_intelligence/jazzer:__subpackages__",
    ],
    deps = ["@bazel_tools//tools/java/runfiles"],
)
